--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title>Heathrow Map</title>
+	<title>Heathrow Map Test</title>
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 </head>
+
 <body>
-<div class="locusmaps" data-account-id="A16W9UL4PCPZ8S" data-venue-id="lhr" data-zoom="10"  data-fullpage  data-controls="all" ></div>
-<script src="https://js.locuslabs.com/latest/locusmaps.js"></script>
+	<div class="locusmaps" data-account-id="A16W9UL4PCPZ8S" data-venue-id="lhr" data-zoom="10" data-fullpage data-controls="all"></div>
+	<script src="https://js.locuslabs.com/latest/locusmaps.js"></script>
 </body>
+
 </html>
